--- a/styles/header.css
+++ b/styles/header.css
@@ -1,12 +1,36 @@
 header {
     display: flex !important;
-    justify-content: space-between;
+    flex-direction: row;
     align-items: center;
-    padding: 0 20px;
-    height: 60px;
+    flex-wrap: wrap;
+    padding: 8px;
     background-color: #a0a0a0;
-    color: #fff;
-    font-size: 20px;
-    font-weight: 600;
+    font-size: 1.5rem;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+header > ul {
+    display: flex;
+    list-style-type: none;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin: 0;
+    padding: 0;
+}
+@media only screen and (max-width: 991.98px) {
+    header {
+        font-size: 2rem;
+    }
+}
+@media only screen and (max-width: 575.98px) {
+    header {
+        flex-direction: column;
+        align-items: center;
+        font-size: 2rem;
+        text-align: center;
+    }
+    header > ul {
+        flex-direction: column;
+        align-items: center;
+        gap: 0;
+    }
 }
