--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,4 @@
+@import url("/styles/std.css");
 * {
     margin: 0;
     padding: 0;
@@ -11,7 +12,11 @@ body > div {
     display: flex;
     flex-direction: row;
 }
-
+@media only screen and (max-width: 576px) {
+    body > div {
+        flex-direction: column;
+    }
+}
 button {
     align-items: center;
     appearance: button;
@@ -50,7 +55,7 @@ button {
     font-feature-settings: normal;
     font-kerning: auto;
     font-optical-sizing: auto;
-    font-size: 14px;
+    font-size: 1rem;
     font-size-adjust: none;
     font-stretch: 100%;
     font-style: normal;
@@ -133,7 +138,7 @@ input {
     font-feature-settings: normal;
     font-kerning: auto;
     font-optical-sizing: auto;
-    font-size: 14px;
+    font-size: 1rem;
     font-size-adjust: none;
     font-stretch: 100%;
     font-style: normal;
@@ -145,7 +150,7 @@ input {
     font-variant-numeric: normal;
     font-variant-position: normal;
     font-variation-settings: normal;
-    font-weight: 400;
+    font-weight: 600;
     height: 40px;
     letter-spacing: normal;
     line-height: 20px;
