--- a/styles/login.css
+++ b/styles/login.css
@@ -15,7 +15,7 @@
 #login > form {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 1rem;
 }
 #login > form > div {
     display: flex;
