--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,15 +1,38 @@
+@import url("/styles/std.css");
 nav {
     display: flex !important;
     flex-direction: row;
+    flex-wrap: wrap;
     padding: 8px;
+    font-size: 1.5rem;
+    text-transform: uppercase;
 }
 nav > ul {
     display: flex;
     list-style-type: none;
-    gap: 10px;
+    flex-wrap: wrap;
+    gap: 1rem;
     margin: 0;
     padding: 0;
 }
 nav > ul:last-child {
     margin-left: auto;
+}
+@media only screen and (max-width: 991.98px) {
+    nav {
+        font-size: 2rem;
+    }
+}
+@media only screen and (max-width: 575.98px) {
+    nav {
+        flex-direction: column;
+        font-size: 2rem;
+    }
+    nav > ul {
+        flex-direction: column;
+        gap: 0;
+    }
+    nav > ul:last-child {
+        margin-left: 0;
+    }
 }
