--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,6 +1,19 @@
 footer {
     display: flex !important;
     flex-direction: column;
+    border-top: 1px solid #000;
+    background-color: #a0a0a0;
+    margin-top: 1rem;
+}
+footer:before {
+    content: "";
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 5px; /* Höhe des Schattens */
+    width: 100%;
+    box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.1); /* Schatten nur oben */
 }
 footer > ul {
     display: flex;
@@ -17,7 +30,7 @@ footer > ul {
     footer {
         flex-direction: column;
         align-items: center;
-        font-size: 1.25rem;
+        font-size: 1rem;
         text-align: center;
     }
     footer > ul {
