--- a/styles/header.css
+++ b/styles/header.css
@@ -7,6 +7,8 @@ header {
     background-color: #a0a0a0;
     font-size: 1.5rem;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    gap: 1rem;
+    border-bottom: 1px solid #000;
 }
 header > ul {
     display: flex;
@@ -16,17 +18,35 @@ header > ul {
     margin: 0;
     padding: 0;
 }
+header > ul:last-child {
+    margin-left: auto;
+}
+header > ul > li {
+    display: flex;
+    align-items: center;
+}
 @media only screen and (max-width: 991.98px) {
     header {
-        font-size: 2rem;
+        flex-direction: column;
+        align-content: start;
+        font-size: 1.5rem;
+        text-align: center;
+        gap: 0;
+    }
+    header > ul {
+        flex-direction: column;
+        align-items: start;
+        gap: 0;
     }
 }
 @media only screen and (max-width: 575.98px) {
     header {
         flex-direction: column;
-        align-items: center;
-        font-size: 2rem;
+
+        align-content: center;
+        font-size: 1rem;
         text-align: center;
+        gap: 0;
     }
     header > ul {
         flex-direction: column;
