--- a/styles/main.css
+++ b/styles/main.css
@@ -3,3 +3,16 @@ main {
     padding: 8px;
     height: 50vh;
 }
+@media only screen and (max-width: 1199.98px) {
+}
+
+@media only screen and (max-width: 991.98px) {
+    main {
+        font-size: 1.25rem;
+    }
+}
+@media only screen and (max-width: 575.98px) {
+    main {
+        font-size: 1.5rem;
+    }
+}
