--- a/component_based_css_test/styles/ui/button.css
+++ b/component_based_css_test/styles/ui/button.css
@@ -2,10 +2,8 @@ button[type=submit] {
     background-color: var(--primary-color);
     color: white;
     border: none;
-    padding: 0.625rem 1.25rem;
-    /* 10px / 16 = 0.625rem, 20px / 16 = 1.25rem */
+    padding: 0.85rem 2.0rem;
     border-radius: 0.3125rem;
-    /* 5px / 16 = 0.3125rem */
     cursor: pointer;
 }
 
@@ -19,45 +17,32 @@ button[type=button] {
     justify-content: center;
     white-space: nowrap;
     border-radius: 0.375rem;
-    border: 0;
-    /* rounded-md */
     font-size: 0.875rem;
-    /* text-sm */
     font-weight: 500;
-    /* font-medium */
     transition: color 0.2s, background-color 0.2s;
-    /* transition-colors */
     outline: none;
-    /* focus-visible:outline-none */
-    height: 2.5rem;
-    /* h-10 */
-    padding: 0.5rem 1rem;
-    /* px-4 py-2 */
+    padding: 0.85rem 2.0rem;
     background-color: var(--secondary-color);
-    /* bg-secondary */
     color: var(--primary-color);
     cursor: pointer;
-    /* text-secondary-foreground */
+    border: 0;
+    box-shadow: inset 0 0 0 0.5px var(--muted-foreground-color);
 }
 
-/*
-button[type=button]:focus-visible {
-    ring: 2px solid var(--ring-color);
-ring-offset: 2px;
-ring-offset-color: var(--background-color);
+/* Add margin to buttons when they are adjacent to each other */
+button+button {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
 }
 
-*/
-button[type=button]:disabled {
+
+*/ button[type=button]:disabled {
     pointer-events: none;
-    /* disabled:pointer-events-none */
     opacity: 0.5;
-    /* disabled:opacity-50 */
 }
 
 button[type=button]:hover {
     opacity: 0.8;
-    /* hover:bg-secondary/80 */
 }
 
 button[type=reset] {
@@ -67,27 +52,17 @@ button[type=reset] {
     white-space: nowrap;
     border-radius: 0.375rem;
     border: 0;
-    /* rounded-md */
     font-size: 0.875rem;
-    /* text-sm */
     font-weight: 500;
-    /* font-medium */
     transition: color 0.2s, background-color 0.2s;
-    /* transition-colors */
     outline: none;
-    /* focus-visible:outline-none */
     height: 2.5rem;
-    /* h-10 */
     padding: 0.5rem 1rem;
-    /* px-4 py-2 */
     background-color: var(--destructive-color);
-    /* bg-destructive */
     color: white;
-    /* text-destructive-foreground */
     cursor: pointer;
 }
 
 button[type=reset]:hover {
     opacity: 0.8;
-    /* hover:bg-secondary/80 */
 }
